# warehouse-allocation

./: CMakeLists.txt  README.md
data/: README
pres/: pres.tex
report/: comparison.tex  conclusion.tex  definition.tex  ea.tex  ls.tex  main.tex  plot.py  specialized.tex  toline.py  transform.sh
report/transoformed/: ea_1000000_wl_1000_1  ea_1000000_wl_100_4  ea_1000000_wl_16_1  ea_1000000_wl_2000_1  ea_1000000_wl_200_1  ea_1000000_wl_25_2  ea_1000000_wl_500_1  ea_1000000_wl_50_1  ea_100000_wl_1000_1  ea_100000_wl_100_4  ea_100000_wl_16_1  ea_100000_wl_2000_1  ea_100000_wl_200_1  ea_100000_wl_25_2  ea_100000_wl_500_1  ea_100000_wl_50_1  ea_10000_wl_1000_1  ea_10000_wl_100_4  (+174 more)
res/: ea_1000000_wl_1000_1  ea_1000000_wl_100_4  ea_1000000_wl_16_1  ea_1000000_wl_2000_1  ea_1000000_wl_200_1  ea_1000000_wl_25_2  ea_1000000_wl_500_1  ea_1000000_wl_50_1  ea_100000_wl_1000_1  ea_100000_wl_100_4  ea_100000_wl_16_1  ea_100000_wl_2000_1  ea_100000_wl_200_1  ea_100000_wl_25_2  ea_100000_wl_500_1  ea_100000_wl_50_1  ea_10000_wl_1000_1  ea_10000_wl_100_4  ea_10000_wl_16_1  ea_10000_wl_2000_1  ea_10000_wl_200_1  ea_10000_wl_25_2  ea_10000_wl_500_1  ea_10000_wl_50_1  ea_1000_wl_1000_1  ea_1000_wl_100_4  ea_1000_wl_16_1  ea_1000_wl_2000_1  ea_1000_wl_200_1  ea_1000_wl_25_2  ea_1000_wl_500_1  ea_1000_wl_50_1  ea_5000000_wl_1000_1  ea_5000000_wl_100_4  ea_5000000_wl_16_1  ea_5000000_wl_2000_1  ea_5000000_wl_200_1  ea_5000000_wl_25_2  ea_5000000_wl_500_1  ea_5000000_wl_50_1  (+152 more)
src/: out.cpp  out.h  problems.cpp  problems.h  randomization.cpp  randomization.h  state.cpp  state.h  timer.h
(+15 files in other folders)
